Refactor instrumentation to be pluggable, defaulting to OTel